Refactor Dockerfile and update Terraform configurations
- Optimized Dockerfile by consolidating dependency installation and improving caching.
- Added new files and directories for application structure in the Docker build process.
- Updated Terraform provider version for Azure and introduced a new subscription ID variable.
- Enhanced example Terraform variables file with subscription ID instructions.

--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,6 +1,9 @@
 # Exemple de configuration Terraform
 # Copiez ce fichier vers terraform.tfvars et remplissez vos valeurs
 
+# ID de souscription Azure (obligatoire)
+subscription_id = "VOTRE-SUBSCRIPTION-ID"  # Obtenez-le avec : az account show --query id -o tsv
+
 # Nom du projet
 project_name = "nyctaxi"
 
